chore: updated translations

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -470,5 +470,16 @@
   "burn": "Горя",
   "burn_address": "Изгорено 🔥",
   "burn_recipient": "Открито изгаряне",
-  "burn_recipient_text": "Изгарянето на Signa или Tokens означава необратима загуба на изгорената стойност!"
+  "burn_recipient_text": "Изгарянето на Signa или Tokens означава необратима загуба на изгорената стойност!",
+  "accept": "Приеми",
+  "accept_json_content": "Кликнете, за да приемете съдържанието за изпращане",
+  "avatar": "Аватар",
+  "custom": "Свободен текст",
+  "enter_ipfs_hash": "Въведете IPFS хеш",
+  "enter_url": "Въведете URL",
+  "homepage": "Начална страница",
+  "json": "JSON",
+  "src44": "SRC44",
+  "src44_compliant": "SRC44 съвместим/съвместим",
+  "src44_info": "SRC44 е стандартът за структурирана информация в полетата за описание. Други приложения също могат да визуализират тази информация."
 }
