--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -470,5 +470,16 @@
   "burn": "Εγκαυμα",
   "burn_address": "Καμένο 🔥",
   "burn_recipient": "Εντοπίστηκε καύση",
-  "burn_recipient_text": "Το Burning Signa ή Tokens σημαίνει μη αναστρέψιμη απώλεια της καμένης αξίας!"
+  "burn_recipient_text": "Το Burning Signa ή Tokens σημαίνει μη αναστρέψιμη απώλεια της καμένης αξίας!",
+  "accept": "Αποδέχομαι",
+  "accept_json_content": "Κάντε κλικ για να αποδεχτείτε το περιεχόμενο για υποβολή",
+  "avatar": "Avatar",
+  "custom": "Ελεύθερο κείμενο",
+  "enter_ipfs_hash": "Εισαγάγετε IPFS Hash",
+  "enter_url": "Εισαγάγετε τη διεύθυνση URL",
+  "homepage": "Αρχική Σελίδα",
+  "json": "JSON",
+  "src44": "SRC44",
+  "src44_compliant": "Συμβατό/συμβατό με SRC44",
+  "src44_info": "Το SRC44 είναι το πρότυπο για δομημένες πληροφορίες στα πεδία περιγραφής. Άλλες εφαρμογές μπορούν επίσης να απεικονίσουν αυτές τις πληροφορίες."
 }
