--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -474,12 +474,12 @@
   "src44": "SRC44",
   "src44_compliant": "SRC44 compliant/compatible",
   "json": "JSON",
-  "custom": "Custom",
+  "custom": "Free Text",
   "enter_ipfs_hash": "Enter IPFS Hash",
   "homepage": "Home Page",
   "enter_url": "Enter URL",
   "avatar": "Avatar",
   "accept": "Accept",
   "accept_json_content": "Click to accept the content for submitting",
-  "src44_info": "SRC44 is the standard for structured information in description fields. Other Apps are capable to visualize these information also."
+  "src44_info": "SRC44 is the standard for structured information in description fields. Other Apps are capable to visualize this information also."
 }
