--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -470,5 +470,16 @@
   "burn": "जलाना",
   "burn_address": "जला हुआ",
   "burn_recipient": "जलने का पता चला",
-  "burn_recipient_text": "सिग्ना या टोकन को जलाने का अर्थ है जले हुए मूल्य का अपरिवर्तनीय नुकसान!"
+  "burn_recipient_text": "सिग्ना या टोकन को जलाने का अर्थ है जले हुए मूल्य का अपरिवर्तनीय नुकसान!",
+  "accept": "स्वीकार करें",
+  "accept_json_content": "सबमिट करने के लिए सामग्री को स्वीकार करने के लिए क्लिक करें",
+  "avatar": "अवतार",
+  "custom": "फ्री टेक्स्ट",
+  "enter_ipfs_hash": "IPFS हैश दर्ज करें",
+  "enter_url": "यू आर एल दर्ज करो",
+  "homepage": "होम पेज",
+  "json": "JSON",
+  "src44": "एसआरसी44",
+  "src44_compliant": "SRC44 आज्ञाकारी / संगत",
+  "src44_info": "विवरण क्षेत्रों में संरचित जानकारी के लिए SRC44 मानक है। अन्य ऐप्स भी इस जानकारी की कल्पना करने में सक्षम हैं।"
 }
