--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -470,5 +470,16 @@
   "burn": "Гореть",
   "burn_address": "Сгорел 🔥",
   "burn_recipient": "Обнаружено горение",
-  "burn_recipient_text": "Сжигание Signa или Токенов означает необратимую потерю сожженной стоимости!"
+  "burn_recipient_text": "Сжигание Signa или Токенов означает необратимую потерю сожженной стоимости!",
+  "accept": "Принимать",
+  "accept_json_content": "Нажмите, чтобы принять содержимое для отправки",
+  "avatar": "Аватар",
+  "custom": "Открытый текст",
+  "enter_ipfs_hash": "Введите хэш IPFS",
+  "enter_url": "Введите URL",
+  "homepage": "Домашняя страница",
+  "json": "JSON",
+  "src44": "SRC44",
+  "src44_compliant": "SRC44-совместимый/совместимый",
+  "src44_info": "SRC44 — это стандарт для структурированной информации в полях описания. Другие приложения также способны визуализировать эту информацию."
 }
