--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -470,5 +470,16 @@
   "burn": "Горети",
   "burn_address": "Спаљено 🔥",
   "burn_recipient": "Бурнинг Детецтед",
-  "burn_recipient_text": "Спаљивање сигнала или токена значи неповратан губитак спаљене вредности!"
+  "burn_recipient_text": "Спаљивање сигнала или токена значи неповратан губитак спаљене вредности!",
+  "accept": "Прихвати",
+  "accept_json_content": "Кликните да бисте прихватили садржај за слање",
+  "avatar": "Аватар",
+  "custom": "Слободан текст",
+  "enter_ipfs_hash": "Унесите ИПФС хеш",
+  "enter_url": "Унесите УРЛ",
+  "homepage": "Почетна страница",
+  "json": "ЈСОН",
+  "src44": "СРЦ44",
+  "src44_compliant": "СРЦ44 компатибилан/компатибилан",
+  "src44_info": "СРЦ44 је стандард за структуриране информације у пољима описа. Друге апликације такође могу да визуелизују ове информације."
 }
