--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -470,5 +470,16 @@
   "burn": "спалити",
   "burn_address": "Згоріла 🔥",
   "burn_recipient": "Виявлено горіння",
-  "burn_recipient_text": "Спалювання Signa або Tokens означає незворотну втрату спаленої вартості!"
+  "burn_recipient_text": "Спалювання Signa або Tokens означає незворотну втрату спаленої вартості!",
+  "accept": "прийняти",
+  "accept_json_content": "Натисніть, щоб прийняти вміст для надсилання",
+  "avatar": "Аватар",
+  "custom": "Вільний текст",
+  "enter_ipfs_hash": "Введіть хеш IPFS",
+  "enter_url": "Введіть URL",
+  "homepage": "Домашня сторінка",
+  "json": "JSON",
+  "src44": "SRC44",
+  "src44_compliant": "SRC44 сумісний/сумісний",
+  "src44_info": "SRC44 є стандартом для структурованої інформації в полях опису. Інші програми також можуть візуалізувати цю інформацію."
 }
