--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -470,5 +470,16 @@
   "burn": "烧伤",
   "burn_address": "烧了🔥",
   "burn_recipient": "检测到燃烧",
-  "burn_recipient_text": "Burning Signa 或 Tokens 意味着烧毁价值的不可逆损失！"
+  "burn_recipient_text": "Burning Signa 或 Tokens 意味着烧毁价值的不可逆损失！",
+  "accept": "接受",
+  "accept_json_content": "点击接受提交内容",
+  "avatar": "头像",
+  "custom": "自由文本",
+  "enter_ipfs_hash": "输入 IPFS 哈希",
+  "enter_url": "输入网址",
+  "homepage": "主页",
+  "json": "JSON",
+  "src44": "SRC44",
+  "src44_compliant": "SRC44 兼容/兼容",
+  "src44_info": "SRC44 是描述字段中结构化信息的标准。其他应用程序也能够可视化此信息。"
 }
