--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -340,7 +340,7 @@
   "success_alias_register": "Ο ψευδώνυμος εγγράφηκε με επιτυχία.",
   "success_clipboard_copy": "Αντιγράφηκε με επιτυχία στο πρόχειρο.",
   "success_send_money": "Το Signa έχει σταλεί.",
-  "success_set_account_info": "Οι πληροφορίες του λογαριασμού σας αποθηκεύτηκαν με επιτυχία.",
+  "success_set_account_info": "Η ενημέρωση των πληροφοριών του λογαριασμού σας υποβλήθηκε με επιτυχία.",
   "success_set_reward_recipient": "Μπήκατε στην πισίνα με επιτυχία!",
   "suggested_fee": "Προτεινόμενα τέλη",
   "tabulator": "Πινακοποιητής",
