--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -340,7 +340,7 @@
   "success_alias_register": "Alias rexistrouse correctamente.",
   "success_clipboard_copy": "Copiouse ao portapapeis con éxito.",
   "success_send_money": "Enviouse Signa.",
-  "success_set_account_info": "A información da túa conta gardouse correctamente.",
+  "success_set_account_info": "A actualización da información da túa conta foi enviada correctamente.",
   "success_set_reward_recipient": "Unícheste á piscina correctamente.",
   "suggested_fee": "Taxas suxeridas",
   "tabulator": "Tabulador",
