--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -340,7 +340,7 @@
   "success_alias_register": "उपनाम सफलतापूर्वक पंजीकृत किया गया।",
   "success_clipboard_copy": "क्लिपबोर्ड पर सफलतापूर्वक कॉपी किया गया।",
   "success_send_money": "साइना भेज दिया गया है।",
-  "success_set_account_info": "आपकी खाता जानकारी सफलतापूर्वक सहेज ली गई है।",
+  "success_set_account_info": "आपकी खाता जानकारी अपडेट सफलतापूर्वक सबमिट कर दी गई है।",
   "success_set_reward_recipient": "आप पूल में सफलतापूर्वक शामिल हो गए!",
   "suggested_fee": "सुझाई गई फीस",
   "tabulator": "टैबुलाटर",
