--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -340,7 +340,7 @@
   "success_alias_register": "Alias berhasil didaftarkan.",
   "success_clipboard_copy": "Berhasil disalin ke papan klip.",
   "success_send_money": "Signa telah dikirim.",
-  "success_set_account_info": "Info akun Anda telah berhasil disimpan.",
+  "success_set_account_info": "Pembaruan info akun Anda telah berhasil dikirim.",
   "success_set_reward_recipient": "Anda berhasil bergabung dengan kumpulan!",
   "suggested_fee": "Biaya yang disarankan",
   "tabulator": "Tabulator",
