--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -340,7 +340,7 @@
   "success_alias_register": "Alias registrato con successo.",
   "success_clipboard_copy": "Copiato negli appunti con successo.",
   "success_send_money": "Signa è stato inviato.",
-  "success_set_account_info": "Le informazioni del tuo account sono state salvate con successo.",
+  "success_set_account_info": "L'aggiornamento delle informazioni sull'account è stato inviato correttamente.",
   "success_set_reward_recipient": "Ti sei iscritto al pool con successo!",
   "suggested_fee": "Tariffe suggerite",
   "tabulator": "tabulatore",
