--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -340,7 +340,7 @@
   "success_alias_register": "Pseudonimas sėkmingai užregistruotas.",
   "success_clipboard_copy": "Sėkmingai nukopijuota į mainų sritį.",
   "success_send_money": "Signa išsiųsta.",
-  "success_set_account_info": "Jūsų paskyros informacija sėkmingai išsaugota.",
+  "success_set_account_info": "Jūsų paskyros informacijos atnaujinimas sėkmingai pateiktas.",
   "success_set_reward_recipient": "Jūs sėkmingai prisijungėte prie baseino!",
   "suggested_fee": "Siūlomi mokesčiai",
   "tabulator": "Lentelė",
