--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -340,7 +340,7 @@
   "success_alias_register": "Alias succesvol geregistreerd.",
   "success_clipboard_copy": "Succesvol naar het klembord gekopieerd.",
   "success_send_money": "Signa is verzonden.",
-  "success_set_account_info": "Uw accountgegevens zijn succesvol opgeslagen.",
+  "success_set_account_info": "De update van uw accountgegevens is succesvol verzonden.",
   "success_set_reward_recipient": "Je bent succesvol lid geworden van het zwembad!",
   "suggested_fee": "Voorgestelde kosten",
   "tabulator": "Tabulator",
