--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -340,7 +340,7 @@
   "success_alias_register": "Alias s-a înregistrat cu succes.",
   "success_clipboard_copy": "Copiat în clipboard cu succes.",
   "success_send_money": "Signa a fost trimisă.",
-  "success_set_account_info": "Informațiile contului dvs. au fost salvate cu succes.",
+  "success_set_account_info": "Actualizarea informațiilor contului dvs. a fost trimisă cu succes.",
   "success_set_reward_recipient": "V-ați înscris cu succes la piscină!",
   "suggested_fee": "Taxe sugerate",
   "tabulator": "Tabulator",
