--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -340,7 +340,7 @@
   "success_alias_register": "Псеудоним је успешно регистрован.",
   "success_clipboard_copy": "Успешно копирано у привремену меморију.",
   "success_send_money": "Сигна је послата.",
-  "success_set_account_info": "Подаци о налогу су успешно сачувани.",
+  "success_set_account_info": "Ажурирање информација о вашем налогу је успешно послато.",
   "success_set_reward_recipient": "Успешно сте се придружили базену!",
   "suggested_fee": "Предложене накнаде",
   "tabulator": "Табулатор",
