--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -340,7 +340,7 @@
   "success_alias_register": "Takma ad başarıyla kaydedildi.",
   "success_clipboard_copy": "Panoya başarıyla kopyalandı.",
   "success_send_money": "Signa gönderildi.",
-  "success_set_account_info": "Hesap bilgileriniz başarıyla kaydedildi.",
+  "success_set_account_info": "Hesap bilgileri güncellemeniz başarıyla gönderildi.",
   "success_set_reward_recipient": "Havuza başarıyla katıldınız!",
   "suggested_fee": "Önerilen ücretler",
   "tabulator": "Tabulator",
