chore: added signumswap to token table

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -48,6 +48,7 @@
   "asset_issuance": "Token Issuance",
   "asset_name": "Token Name",
   "asset_transfer": "Token Transfer",
+  "asset_trade": "Trade on SignumSwap",
   "assets": "Tokens",
   "attachment": "Attachment",
   "avgCommitment": "Avg. Commitment",
@@ -329,7 +330,7 @@
   "sender_address": "Sender Address",
   "sender_id": "Sender ID",
   "sender_public_key": "Sender Public Key",
-  "set_account_info": "Set Account Info",
+  "set_account_info": "Edit Account Info",
   "set_reward_recipient": "Join Pool",
   "settings": "Settings",
   "settings_node": "Node Configuration",
